<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".jan12.jan12_2">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calculator_demo"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="integers"
        android:hint="@string/first_number"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="integers"
        android:hint="@string/second_number"
        android:inputType="number"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="sum"
            android:text="@string/plus"
            android:textColor="#212121" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="sub"
            android:text="@string/minus"
            android:textColor="#212121" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="mul"
            android:text="@string/multiply_symbol"
            android:textColor="#212121" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="div"
            android:text="@string/divide_symbol"
            android:textColor="#212121" />

    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/result"
        android:textSize="15sp" />

</LinearLayout>