<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".feb9.feb9_1">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text=""
        android:textSize="20sp" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewId"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="integers"
        android:hint="@string/number_1"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNumber"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="integers"
        android:hint="@string/number_2"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/secondNumber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/add"
        android:textColor="#212121" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/secondNumber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/subtract"
        android:textColor="#212121" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/add"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/multiply"
        android:textColor="#212121" />

    <Button
        android:id="@+id/divide"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/subtract"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/divide"
        android:textColor="#212121" />

</RelativeLayout>